:tada: Added the skeleton of the proj.
~

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+
+# Renv :
+renv/
+
+# Docs (if they're ignored they might 
+#       not belong to me or be private )
+Docs/Biopython-tutorial.pdf
+
+
 # History files
 .Rhistory
 .Rapp.history
