--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ license = "MIT"
 python = "^3.8"
 pandas = "^1.1.2"
 biopython = "^1.78"
+entrezpy = "^2.0.5"
 
 [tool.poetry.dev-dependencies]
 ipython = "^7.18.1"
