--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.8"
 pandas = "^1.1.2"
 biopython = "^1.78"
 entrezpy = "^2.0.5"
+ete3 = "^3.1.2"
 
 [tool.poetry.dev-dependencies]
 ipython = "^7.18.1"
