--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ pandas = "^1.1.2"
 biopython = "^1.78"
 entrezpy = "^2.0.5"
 ete3 = "^3.1.2"
+sacred = "^0.8.1"
 
 [tool.poetry.dev-dependencies]
 ipython = "^7.18.1"
