--- a/Python/pyproject.toml
+++ b/Python/pyproject.toml
@@ -12,9 +12,11 @@ biopython = "^1.78"
 entrezpy = "^2.0.5"
 ete3 = "^3.1.2"
 sacred = "^0.8.1"
+toml = "^0.10.2"
 
 [tool.poetry.dev-dependencies]
 ipython = "^7.18.1"
+jupyter = "^1.0.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
