--- a/Julia-seq/Project.toml
+++ b/Julia-seq/Project.toml
@@ -12,12 +12,15 @@ Codecs = "19ecbf4d-ef7c-5e4b-b54a-0a0ff23c5aed"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 FASTX = "c2308a5c-f048-11e8-3e8a-31650f418d12"
 GenomeGraphs = "3aa97884-90e5-11e8-2134-af657ec4f203"
+GraphPlot = "a2cc645c-3eea-5389-862e-a155d0052231"
 IntervalTrees = "524e6230-43b7-53ae-be76-1e9e4d08d11b"
 KmerAnalysis = "a20136b7-8e32-4c10-91d3-7060c0bd8ec7"
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 Microbiome = "3bd8f0ae-a0f2-5238-a5af-e1b399a4940c"
+PhyloTrees = "4c47b132-0681-5a5d-b498-3afcf53fd314"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Pluto = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
 PlutoUI = "7f904dfe-b85e-4ff6-b463-dae2292396a8"
 PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
 RCall = "6f49c342-dc21-5d91-9882-a32aef131414"
+StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
